[package]
name = "pest_extra"
version = "0.1.0"
edition = "2021"
description = "Provides additional functionality for the Pest parser"
homepage = "https://github.com/zalupa35/pest_extra"
repository = "https://github.com/zalupa35/pest_extra"
license = "MIT"

[features]
vm = ["dep:pest_vm"]
formatter = ["dep:pest_fmt"]

[dependencies]
pest = "2.7.5"
pest_derive = "2.7.5"
pest_meta = "2.7.5"
pest_vm = { version = "2.7.5", optional = true }
pest_fmt = { version = "0.2.4", optional = true }